--- a/LocalNotificationScheduler/LocalNotificationScheduler.xcodeproj/xcshareddata/xcschemes/LocalNotificationSchedulerTests.xcscheme
+++ b/LocalNotificationScheduler/LocalNotificationScheduler.xcodeproj/xcshareddata/xcschemes/LocalNotificationSchedulerTests.xcscheme
@@ -5,6 +5,19 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForRunning = "YES"
+            buildForTesting = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "64C91A1E1C31A8250078A48D"
+               BuildableName = "LocalNotificationSchedulerTests.xctest"
+               BlueprintName = "LocalNotificationSchedulerTests"
+               ReferencedContainer = "container:LocalNotificationScheduler.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
