--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: swift
+os: osx
+osx_image: xcode7
+sudo: false
 
 script:
   - xctool -project LocalNotificationScheduler.xcodeproj -scheme LocalNotificationScheduler -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
