--- a/LocalNotificationScheduler/LocalNotificationScheduler.xcodeproj/xcshareddata/xcschemes/LocalNotificationSchedulerTests.xcscheme
+++ b/LocalNotificationScheduler/LocalNotificationScheduler.xcodeproj/xcshareddata/xcschemes/LocalNotificationSchedulerTests.xcscheme
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0710"
+   LastUpgradeVersion = "0800"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
+            buildForTesting = "YES"
             buildForRunning = "YES"
-            buildForTesting = "YES">
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "64C91A1E1C31A8250078A48D"
@@ -49,6 +52,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "64C91A1E1C31A8250078A48D"
+            BuildableName = "LocalNotificationSchedulerTests.xctest"
+            BlueprintName = "LocalNotificationSchedulerTests"
+            ReferencedContainer = "container:LocalNotificationScheduler.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
